openmolar (0.5.0-beta11-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 16 Dec 2013 23:58:03 +0000


openmolar (0.5.0-beta10-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 16 Dec 2013 12:36:29 +0000


openmolar (0.5.0-beta09-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 06 Dec 2013 15:17:21 +0000


openmolar (0.5.0-beta08-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 06 Dec 2013 12:26:23 +0000


openmolar (0.5.0-beta07-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 04 Dec 2013 22:43:41 +0000


openmolar (0.5.0-beta06-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 02 Dec 2013 23:36:42 +0000


openmolar (0.5.0-beta05-0~__DIST__0) __DIST__; urgency=low

  * New Upstream (fixes #74 and #73)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 02 Dec 2013 09:53:32 +0000


openmolar (0.5.0-beta04-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 02 Dec 2013 00:24:34 +0000


openmolar (0.5.0-beta03-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 29 Nov 2013 09:48:56 +0000


openmolar (0.5.0-beta02-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 29 Nov 2013 08:59:59 +0000


openmolar (0.5.0-beta01-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 28 Nov 2013 22:49:57 +0000


openmolar (0.5.0-alpha9-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 27 Nov 2013 02:43:03 +0000


openmolar (0.5.0-alpha8-0~__DIST__0) __DIST__; urgency=low
